--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Care_Prototype_01"
         tools:targetApi="31" >
         <activity
+            android:name=".PythonLessons.PythonIntroduction"
+            android:exported="false" />
+        <activity
+            android:name=".PythonLessons.PythonIntroductionFragments.PythonIntroduction"
+            android:exported="false" />
+        <activity
+            android:name=".care_languages.PythonLanguageActivity"
+            android:exported="false" />
+        <activity
             android:name=".JavaLessonsActivity.JavaArray"
             android:exported="false" />
         <activity
@@ -47,6 +56,9 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SplashScreen"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
