--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,12 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Care_Prototype_01"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
-            android:name=".PythonLessons.PythonIntroduction"
+            android:name=".PythonLessons.PythonComments"
             android:exported="false" />
         <activity
-            android:name=".PythonLessons.PythonIntroductionFragments.PythonIntroduction"
+            android:name=".care_languages.CSharpLanguageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PythonLessons.PythonIntroduction"
             android:exported="false" />
         <activity
             android:name=".care_languages.PythonLanguageActivity"
@@ -59,10 +62,9 @@
             android:exported="true" />
         <activity
             android:name=".SplashScreen"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
