--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,33 @@
         android:theme="@style/Theme.Care_Prototype_01"
         tools:targetApi="31">
         <activity
+            android:name=".PythonLessons.PythonOOP"
+            android:exported="false" />
+        <activity
+            android:name=".PythonLessons.PythonArrays"
+            android:exported="false" />
+        <activity
+            android:name=".PythonLessons.PythonLoopingStatements"
+            android:exported="false" />
+        <activity
+            android:name=".PythonLessons.PythonConditionalStatement"
+            android:exported="false" />
+        <activity
+            android:name=".PythonLessons.PythonOperators"
+            android:exported="false" />
+        <activity
+            android:name=".PythonLessons.PythonDataTypes"
+            android:exported="false" />
+        <activity
+            android:name=".PythonLessons.PythonInputs"
+            android:exported="false" />
+        <activity
+            android:name=".PythonLessons.PythonVariables"
+            android:exported="false" />
+        <activity
+            android:name=".PythonLessons.PythonSyntax"
+            android:exported="false" />
+        <activity
             android:name=".PythonLessons.PythonComments"
             android:exported="false" />
         <activity
@@ -65,6 +92,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
