--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,134 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+	xmlns:tools="http://schemas.android.com/tools">
 
-    <application
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Care_Prototype_01"
-        tools:targetApi="31">
-        <activity
-            android:name=".CSharpLessons.CSharpVariables"
-            android:exported="false" />
-        <activity
-            android:name=".CSharpLessons.CSharpSyntax"
-            android:exported="false" />
-        <activity
-            android:name=".CSharpLessons.CSharpOperator"
-            android:exported="false" />
-        <activity
-            android:name=".CSharpLessons.CSharpOop"
-            android:exported="false" />
-        <activity
-            android:name=".CSharpLessons.CSharpLoopingStatements"
-            android:exported="false" />
-        <activity
-            android:name=".CSharpLessons.CSharpIntroduction"
-            android:exported="false" />
-        <activity
-            android:name=".CSharpLessons.CSharpInputs"
-            android:exported="false" />
-        <activity
-            android:name=".CSharpLessons.CSharpDataTypes"
-            android:exported="false" />
-        <activity
-            android:name=".CSharpLessons.CSharpConditionalStatements"
-            android:exported="false" />
-        <activity
-            android:name=".CSharpLessons.CSharpComments"
-            android:exported="false" />
-        <activity
-            android:name=".CSharpLessons.CSharpArrays"
-            android:exported="false" />
-        <activity
-            android:name=".PythonLessons.PythonOOP"
-            android:exported="false" />
-        <activity
-            android:name=".PythonLessons.PythonArrays"
-            android:exported="false" />
-        <activity
-            android:name=".PythonLessons.PythonLoopingStatements"
-            android:exported="false" />
-        <activity
-            android:name=".PythonLessons.PythonConditionalStatement"
-            android:exported="false" />
-        <activity
-            android:name=".PythonLessons.PythonOperators"
-            android:exported="false" />
-        <activity
-            android:name=".PythonLessons.PythonDataTypes"
-            android:exported="false" />
-        <activity
-            android:name=".PythonLessons.PythonInputs"
-            android:exported="false" />
-        <activity
-            android:name=".PythonLessons.PythonVariables"
-            android:exported="false" />
-        <activity
-            android:name=".PythonLessons.PythonSyntax"
-            android:exported="false" />
-        <activity
-            android:name=".PythonLessons.PythonComments"
-            android:exported="false" />
-        <activity
-            android:name=".care_languages.CSharpLanguageActivity"
-            android:exported="false" />
-        <activity
-            android:name=".PythonLessons.PythonIntroduction"
-            android:exported="false" />
-        <activity
-            android:name=".care_languages.PythonLanguageActivity"
-            android:exported="false" />
-        <activity
-            android:name=".JavaLessonsActivity.JavaArray"
-            android:exported="false" />
-        <activity
-            android:name=".JavaLessonsActivity.JavaLoopingStatements"
-            android:exported="false" />
-        <activity
-            android:name=".JavaLessonsActivity.JavaConditionalStatements"
-            android:exported="false" />
-        <activity
-            android:name=".JavaLessonsActivity.JavaOperators"
-            android:exported="false" />
-        <activity
-            android:name=".JavaLessonsActivity.JavaDataTypes"
-            android:exported="false" />
-        <activity
-            android:name=".JavaLessonsActivity.JavaInputs"
-            android:exported="false" />
-        <activity
-            android:name=".JavaLessonsActivity.JavaVariables"
-            android:exported="false" />
-        <activity
-            android:name=".JavaLessonsActivity.JavaComments"
-            android:exported="false" />
-        <activity
-            android:name=".JavaLessonsActivity.JavaSyntax"
-            android:exported="false" />
-        <activity
-            android:name=".JavaLessonsActivity.JavaIntroduction"
-            android:exported="false" />
-        <activity
-            android:name=".care_languages.JavaLanguageActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
-        <activity
-            android:name=".SplashScreen"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+	<application
+		android:allowBackup="true"
+		android:dataExtractionRules="@xml/data_extraction_rules"
+		android:fullBackupContent="@xml/backup_rules"
+		android:icon="@mipmap/ic_launcher"
+		android:label="@string/app_name"
+		android:roundIcon="@mipmap/ic_launcher_round"
+		android:supportsRtl="true"
+		android:theme="@style/Theme.Care_Prototype_01"
+		tools:targetApi="31">
+		<activity
+			android:name=".JavaLessonsActivity.JavaOop"
+			android:exported="false" />
+		<activity
+			android:name=".CSharpLessons.CSharpVariables"
+			android:exported="false" />
+		<activity
+			android:name=".CSharpLessons.CSharpSyntax"
+			android:exported="false" />
+		<activity
+			android:name=".CSharpLessons.CSharpOperator"
+			android:exported="false" />
+		<activity
+			android:name=".CSharpLessons.CSharpOop"
+			android:exported="false" />
+		<activity
+			android:name=".CSharpLessons.CSharpLoopingStatements"
+			android:exported="false" />
+		<activity
+			android:name=".CSharpLessons.CSharpIntroduction"
+			android:exported="false" />
+		<activity
+			android:name=".CSharpLessons.CSharpInputs"
+			android:exported="false" />
+		<activity
+			android:name=".CSharpLessons.CSharpDataTypes"
+			android:exported="false" />
+		<activity
+			android:name=".CSharpLessons.CSharpConditionalStatements"
+			android:exported="false" />
+		<activity
+			android:name=".CSharpLessons.CSharpComments"
+			android:exported="false" />
+		<activity
+			android:name=".CSharpLessons.CSharpArrays"
+			android:exported="false" />
+		<activity
+			android:name=".PythonLessons.PythonOOP"
+			android:exported="false" />
+		<activity
+			android:name=".PythonLessons.PythonArrays"
+			android:exported="false" />
+		<activity
+			android:name=".PythonLessons.PythonLoopingStatements"
+			android:exported="false" />
+		<activity
+			android:name=".PythonLessons.PythonConditionalStatement"
+			android:exported="false" />
+		<activity
+			android:name=".PythonLessons.PythonOperators"
+			android:exported="false" />
+		<activity
+			android:name=".PythonLessons.PythonDataTypes"
+			android:exported="false" />
+		<activity
+			android:name=".PythonLessons.PythonInputs"
+			android:exported="false" />
+		<activity
+			android:name=".PythonLessons.PythonVariables"
+			android:exported="false" />
+		<activity
+			android:name=".PythonLessons.PythonSyntax"
+			android:exported="false" />
+		<activity
+			android:name=".PythonLessons.PythonComments"
+			android:exported="false" />
+		<activity
+			android:name=".care_languages.CSharpLanguageActivity"
+			android:exported="false" />
+		<activity
+			android:name=".PythonLessons.PythonIntroduction"
+			android:exported="false" />
+		<activity
+			android:name=".care_languages.PythonLanguageActivity"
+			android:exported="false" />
+		<activity
+			android:name=".JavaLessonsActivity.JavaArray"
+			android:exported="false" />
+		<activity
+			android:name=".JavaLessonsActivity.JavaLoopingStatements"
+			android:exported="false" />
+		<activity
+			android:name=".JavaLessonsActivity.JavaConditionalStatements"
+			android:exported="false" />
+		<activity
+			android:name=".JavaLessonsActivity.JavaOperators"
+			android:exported="false" />
+		<activity
+			android:name=".JavaLessonsActivity.JavaDataTypes"
+			android:exported="false" />
+		<activity
+			android:name=".JavaLessonsActivity.JavaInputs"
+			android:exported="false" />
+		<activity
+			android:name=".JavaLessonsActivity.JavaVariables"
+			android:exported="false" />
+		<activity
+			android:name=".JavaLessonsActivity.JavaComments"
+			android:exported="false" />
+		<activity
+			android:name=".JavaLessonsActivity.JavaSyntax"
+			android:exported="false" />
+		<activity
+			android:name=".JavaLessonsActivity.JavaIntroduction"
+			android:exported="false" />
+		<activity
+			android:name=".care_languages.JavaLanguageActivity"
+			android:exported="false" />
+		<activity
+			android:name=".MainActivity"
+			android:exported="true" />
+		<activity
+			android:name=".SplashScreen"
+			android:exported="true">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+	</application>
 
 </manifest>
