done with all quizes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:logo="@mipmap/ic_launcher"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/care_bg"
         android:label="CARE"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
